--- a/east-central-line-stations.html
+++ b/east-central-line-stations.html
@@ -7520,7 +7520,7 @@ a.anchor-link {
 <p>Dear East Central Line Aficionados,</p>
 <p>I've crunched the numbers. The results are in, all crunched up. Here is my big analysis of our station opinions. Let me know if I've missed anything or made glaring errors.</p>
 <p>Yours,</p>
-<p>That friendly guy who spoke to us at Roading Valley station.</p>
+<p>That friendly guy who spoke to us at Roding Valley Station.</p>
 <p><em>note: this email is best read on a screen with an aspect ratio that isn't too wide. If the plots/images are all huge, consider shrinking the window width.</em></p>
 </div>
 </div>
