--- a/east-central-line-stations.html
+++ b/east-central-line-stations.html
@@ -7723,21 +7723,21 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Let's give out some more awards based on these results:</p>
 <p><strong>Award for Best Platform:</strong> 🏆 Gants Hill 🏆</p>
-<p><img alt="" src="gants-hill-platform.png"/></p>
+<p><img alt="" src="https://pbs.twimg.com/media/DqckELVW4AEM34x.jpg"/></p>
 <p><strong>Award for Best Concourse:</strong> 🏆 Gants Hill 🏆 (again)</p>
-<p><img alt="" src="gants-hill-concourse.png"/></p>
+<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Gants_Hill_Station%2C_Platform_Level_Concourse.jpg/2560px-Gants_Hill_Station%2C_Platform_Level_Concourse.jpg"/></p>
 <p><strong>Award for Best Exterior:</strong> 🏆 Newbury Park 🏆</p>
-<p><img alt="" src="newbury-park-exterior.png"/></p>
+<p><img alt="" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijRsJuJrTnLapduT8R8uaElXPu4ykkWFCgX5SQhCO4gTTU-g0h4yz5YPwghtElAxed86jDhkIqQkmgSCB8uPG6p0SJuX067U9QzeHkgnvygMrS9pM21zmuxMGylJmJNL66M8foqPu-hhc/s1600/P1190557.JPG"/></p>
 <p><strong>Award for Best Misc:</strong> 🏆 Leytonstone 🏆</p>
-<p><img alt="" src="leytonstone-misc.png"/></p>
+<p><img alt="" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgR9DiAQkvJDkawGEvj1JslbxzUVeVIjC6SNkS3GHLwB0RNXASN-FERiQisdVnzdIyjiezxf3WdWqkTHl1e_aiBFYU_tgYg2LjiI5aA8Nw5mLx7w23teLKT9NkQBUrelLvfNVN2aX72JGk/s1600/P1010812.JPG"/></p>
 <p><strong>Award for Worst Platform:</strong> 😑 Leytonstone 😑</p>
-<p><img alt="" src="leytonstone-platform.png"/></p>
+<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Leytonstone_station_eastbound_east.JPG/1280px-Leytonstone_station_eastbound_east.JPG"/></p>
 <p><strong>Award for Worst Concourse:</strong> 😑 Roding Valley 😑</p>
-<p><img alt="" src="roding-valley-concourse.png"/></p>
+<p><img alt="" src="https://i2-prod.mylondon.news/incoming/article21619028.ece/ALTERNATES/s1200c/1_Roding-Valley-station.jpg"/></p>
 <p><strong>Award for Worst Exterior:</strong> 😑 Gants Hill 😑</p>
-<p><img alt="" src="gants-hill-exterior.png"/></p>
+<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/6/66/Gants_Hill_stn_southwest_entrance.JPG"/></p>
 <p><strong>Award for Worst Misc:</strong> 😑 Theydon Bois 😑</p>
-<p><img alt="" src="theydon-misc.png"/></p>
+<p><img alt="" src="https://www.guardian-series.co.uk/resources/images/5499485.jpg?type=mds-article-962"/></p>
 </div>
 </div>
 </div>
@@ -7771,9 +7771,9 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p><strong>Award for Best Station:</strong> 🏆 Snaresbrook 🏆</p>
-<p><img alt="" src="snaresbrook.png"/></p>
+<p><img alt="" src="https://cf.bstatic.com/xdata/images/landmark/1020x340/273407.jpg?k=d6138e151dc330df4a1afee942f8f154f6b01b6bba918fa0d4000b93949ee132&amp;o="/></p>
 <p><strong>Award for Worst Station:</strong> 😑 Epping 😑</p>
-<p><img alt="" src="epping.png"/></p>
+<p><img alt="" src="https://s0.geograph.org.uk/geophotos/04/38/67/4386751_73ba3926.jpg"/></p>
 <p><strong>Hugh:</strong> Best station =  Newbury Park | Worst station = Epping</p>
 <p><strong>Charlie:</strong> Best station = Snaresbrook | Worst station = Epping</p>
 <p><strong>George:</strong> Best station = Grange Hill / Loughton / Snaresbrook | Worst station = Epping</p>
@@ -7787,7 +7787,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="" src="thats-all.gif"/></p>
+<p><img alt="" src="https://media2.giphy.com/media/xUPOqo6E1XvWXwlCyQ/giphy.gif?cid=6c09b952emcutm9i1vtexmqowxb09e9rz3n6bziezq9ss37z&amp;ep=v1_gifs_search&amp;rid=giphy.gif&amp;ct=g"/></p>
 <p>For full details: <a href="https://github.com/thecharlieblake/station-ratings">github.com/thecharlieblake/station-ratings</a></p>
 </div>
 </div>
