--- a/east-central-line-stations.html
+++ b/east-central-line-stations.html
@@ -7515,10 +7515,10 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ratings-Analysis-for-Central-Line-stations-east-of-Leyton">Ratings Analysis for Central Line stations east of Leyton<a class="anchor-link" href="#Ratings-Analysis-for-Central-Line-stations-east-of-Leyton">¶</a></h1><p><strong>Participants:</strong> Hugh, Charlie, George, Oliver</p>
+<h1 id="An-analysis-of-Central-Line-stations-east-of-Leyton">An analysis of Central Line stations east of Leyton<a class="anchor-link" href="#An-analysis-of-Central-Line-stations-east-of-Leyton">¶</a></h1><p><strong>Participants:</strong> Hugh, Charlie, George, Oliver</p>
 <p><strong>Year:</strong> 2024</p>
 <p>Dear East Central Line Aficionados,</p>
-<p>I've crunched the numbers. The results are in, all crunched up. Here is my big analysis of our station opinions. Let me know if I've missed anything or made glaring errors.</p>
+<p>I've crunched the numbers. They're all crunched up. The results are in. Here is my big analysis of our station opinions. Let me know if I've missed anything or made glaring errors.</p>
 <p>Yours,</p>
 <p>That friendly guy who spoke to us at Roding Valley Station.</p>
 <p><em>note: this email is best read on a screen with an aspect ratio that isn't too wide. If the plots/images are all huge, consider shrinking the window width.</em></p>
